Name: VE
Version: 0.1
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2012
Synopsis: A library for generating GUIs based upon structural definitions
Description: A library for generating GUIs based upon structural definitions 

Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base == 4.*, containers, gtk, aeson, vector, unordered-containers, text, bytestring, filepath, directory, unix, attoparsec

  Exposed-modules:
        VE,
        GTK,
        JSON
